@@ -1,3 +1,8 @@
+2010-03-23  Michael Snyder  <msnyder@vmware.com>
+
+	* server.c (crc32): New function.
+	(handle_query): Add handling for 'qCRC:' request.
+
 2010-03-23  Pedro Alves  <pedro@codesourcery.com>
 
 	* linux-x86-low.c (x86_linux_prepare_to_resume): Clear DR6 if the
